[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conditional-futures"
version = "0.1.0"
description = "Make multi-threaded concurrency forward-compatible for the free-threaded future of Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Christopher Ariza" }
]
keywords = ["threading", "futures", "concurrency", "GIL", "executor", "parallelism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/static-frame/conditional-futures"
Repository = "https://github.com/static-frame/conditional-futures"
Issues = "https://github.com/static-frame/conditional-futures/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["conditional_futures*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
