[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conditional-futures"
version = "0.1.0"
description = "Make multi-threaded concurrency forward-compatible for the free-threaded future of Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Christopher Ariza" }
]
keywords = ["threading", "futures", "concurrency", "GIL", "executor", "parallelism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/static-frame/conditional-futures"
Repository = "https://github.com/static-frame/conditional-futures"
Issues = "https://github.com/static-frame/conditional-futures/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["conditional_futures*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]



[tool.mypy]
files = "conditional_futures/*.py"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = "misc"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
