[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conditional-futures"
version = "1.0.2"
description = "Make multi-threaded concurrency backward- and forward-compatible for the free-threaded future of Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Christopher Ariza" }
]
keywords = ["threading", "futures", "concurrency", "GIL", "executor", "parallelism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.5",
    "pytest==9.0.1",
    "nox==2025.11.12",
    "build",
]

[project.urls]
Homepage = "https://github.com/static-frame/conditional-futures"
Repository = "https://github.com/static-frame/conditional-futures"
Issues = "https://github.com/static-frame/conditional-futures/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["conditional_futures*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]



[tool.mypy]
files = "conditional_futures/*.py"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = "misc"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
